--- a/app/src/main/resources/Messages.properties
+++ b/app/src/main/resources/Messages.properties
@@ -2,4 +2,4 @@ javax.faces.validator.LengthValidator.MAXIMUM=Length is greater than allowable m
 javax.faces.validator.LengthValidator.MINIMUM=Length is less than allowable minimum of ''{0}''
 
 
-jaz.app.name = Allezon
+jaz.app.name = Alleblog
